--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
 MarkupSafe==1.1.1
-mysqlclient==2.0.1
+mysql==2.0.1
 PyMySQL==0.10.1
 pyrsistent==0.16.0
 pytz==2020.1
