--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ install==1.3.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
+mysql-connector-python==8.0.21
 MarkupSafe==1.1.1
 mysql==0.0.2
 pyrsistent==0.16.0
