--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,12 @@ install==1.3.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
-mysql-connector-python==8.0.21
 MarkupSafe==1.1.1
 mysql==0.0.2
+mysql-connector-python==8.0.21
+mysqlclient==2.0.1
+protobuf==3.13.0
+PyMySQL==0.10.1
 pyrsistent==0.16.0
 pytz==2020.1
 six==1.15.0
