--- a/requirements.txt
+++ b/requirements.txt
@@ -3,20 +3,19 @@ attrs==20.2.0
 click==7.1.2
 Flask==1.1.2
 flask-restplus==0.13.0
+flask-restx==0.2.0
 Flask-SQLAlchemy==2.4.4
 gunicorn==19.10.0
-install==1.3.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
 MarkupSafe==1.1.1
-mysql==0.0.2
 mysql-connector-python==8.0.21
-mysql-client==0.0.1
 protobuf==3.13.0
 PyMySQL==0.10.1
 pyrsistent==0.16.0
 pytz==2020.1
 six==1.15.0
 SQLAlchemy==1.3.19
+uWSGI==2.0.19.1
 Werkzeug==0.16.1
